[gd_scene load_steps=4 format=3 uid="uid://87ld1okihf31"]

[ext_resource type="Script" uid="uid://dtjw0hgtw64u2" path="res://Source/UI/DevConsole/dev_console.gd" id="1_jywx7"]
[ext_resource type="FontFile" uid="uid://bekus7kljl5ap" path="res://Assets/Fonts/m5x7/m5x7.ttf" id="2_ynq24"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4eq4m"]
bg_color = Color(0.144, 0.3416, 0.6, 0.843137)

[node name="DevConsole" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jywx7")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(480, 270)
layout_mode = 1
offset_right = 160.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4eq4m")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_ynq24")
theme_override_fonts/mono_font = ExtResource("2_ynq24")
theme_override_fonts/italics_font = ExtResource("2_ynq24")
theme_override_fonts/bold_italics_font = ExtResource("2_ynq24")
theme_override_fonts/bold_font = ExtResource("2_ynq24")
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
scroll_following = true

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ynq24")
theme_override_font_sizes/font_size = 48
placeholder_text = "Enter console command"
context_menu_enabled = false
caret_blink = true

[connection signal="text_changed" from="PanelContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="PanelContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
